--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,12 @@ else()
   add_compile_options(-Wall)
 endif()
 
-find_package(Embree REQUIRED)
+find_package(Embree PATHS "/opt/homebrew/lib/" REQUIRED)
+IF(Embree_FOUND)
+  message(STATUS "find embree ${Embree_FOUND}:${EMBREE_LIBRARY}})")
+ELSE()
+  message(STATUS "not find embree")
+ENDIF()
 include_directories(${EMBREE_INCLUDE_PATH})
 link_libraries(${EMBREE_LIBRARY})
 
